# graphql-ppx

./: .gitattributes  .gitignore  .npmignore  .ocamlformat  .travis.yml  402.json  406.json  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  bsconfig.json  build_m1.sh  convert_to_ml.sh  copyPlatformBinaryInPlace.js  dslToJson.js  dune  dune-project  dune-workspace  esy.json  graphql_ppx.opam  graphql_schema.json  linux.musl.x86_64.json  linux.x86_64.json  macos.arm64.json  package-lock.json  package.json  rescript.json  schema.graphql  tests.sh  wait_pr_to_be_merged.json
.ci/: Dockerfile  download_binaries.sh  wait_for_binaries.sh  wait_for_builds.sh
.github/workflows/: main.yml  nodejs.yml  pipeline.yml  release.yml
.mocks/00c7ce25/: esy.json
.mocks/01b2fc0e/: esy.json
.mocks/01e8ff51/: esy.json
.mocks/0654ca63/: esy.json
.mocks/07f8460e/: esy.json
.mocks/09509428/: esy.json
.mocks/0c562d61/: esy.json
.mocks/0c7562a1/: esy.json
.mocks/0eda52fb/: esy.json
.mocks/0fd6a509/: esy.json
.mocks/101e65c1/: esy.json
.mocks/108ccef8/: esy.json
.mocks/15af4317/: esy.json
.mocks/15beda55/: esy.json
.mocks/167f4570/: esy.json
.mocks/16bad03b/: esy.json
.mocks/18ea7afe/: esy.json
.mocks/1a95ff7f/: esy.json
.mocks/1bf997cd/: esy.json
.mocks/1f8c15e0/: esy.json
.mocks/1fdf1a52/: esy.json
.mocks/200e732a/: esy.json
.mocks/21a57265/: esy.json
.mocks/22154d24/: esy.json
.mocks/22a3a320/: esy.json
.mocks/24038528/: esy.json
.mocks/2436cb35/: esy.json
.mocks/24b19977/: esy.json
402.esy.lock/: index.json
406.esy.lock/: index.json
bucklescript/: GraphQL_PPX.bs.js  GraphQL_PPX.re
discover/: discover.re
documentation/: docusaurus.config.js  package.json  sidebars.js
esy.lock/: index.json
example-bs/: .gitignore  bsconfig.json  package.json
example-native/: Hello.re  dune
linux.musl.x86_64.esy.lock/: index.json
macos.arm64.esy.lock/: index.json
rescript-runtime/: GraphQL_PPX.ml  graphql_ppx_runtime.ml
snapshot_tests/: .gitignore  ppx_output.sh
src/: compat.re  dune  graphql_ast.re  graphql_lexer.re  graphql_parser_document.re  graphql_parser_value.re  graphql_ppx.re  graphql_ppx_base.re  log.re  option.re  output_bucklescript_decoder.re  output_bucklescript_encoder.re  output_bucklescript_module.re  output_bucklescript_unifier.re  ppx_config.re  result_ext.re  schema.re  source_pos.re  traversal_utils.re  type_utils.re  validations.re
src/base/: ast_serializer_apollo.ml  ast_serializer_apollo.re  ast_transforms.ml  ast_transforms.re  ast_transforms.rei  build_config.cppo.ml  compat.re  dirty_checker.ml  dirty_checker.re  dune  extract_type_definitions.ml  extract_type_definitions.mli  extract_type_definitions.re  extract_type_definitions.rei  generator_utils.ml  generator_utils.re  graphql_ast.re  graphql_lexer.ml  graphql_lexer.re  graphql_parser.ml  graphql_parser.re  graphql_parser_directives.ml  graphql_parser_directives.re  graphql_parser_document.ml  graphql_parser_document.re  graphql_parser_schema.ml  graphql_parser_schema.re  graphql_parser_schema.rei  graphql_parser_shared.re  graphql_parser_value.ml  graphql_ppx_base.ml  graphql_ppx_base.re  graphql_printer.ml  graphql_printer.re  graphql_printer.rei  log.re  multi_visitor.re  option.re  ppx_config.ml  ppx_config.re  (+37 more)
tests/: bsconfig.json  graphql_schema.json  package.json
tests_bucklescript/: .gitignore  .vscode  Makefile  bsconfig.json  dune  esy.json  how_to_convert_the_ast.md  package-lock.json  package.json  run.js  test2.re  test3.ml  test3.re  test3_processed.ml  testml  tmp_file
tests_bucklescript/tests/: RunTests.ml  RunTests.re  Snapshots.ml  Snapshots.re  TestFramework.ml  TestFramework.re  dune
tests_native/: arg_named_query.ml  arg_named_query.re  cli_colors.ml  comment.ml  comment.re  custom_decoder.ml  custom_decoder.re  custom_scalars.ml  custom_scalars.re  dune  enum_input.ml  enum_input.re  fragment_definition.ml  fragment_definition.re  fragment_union_serialization.ml  implicit_typename.ml  interface.ml  interface.re  list_args.ml  list_args.re  list_inputs.ml  list_inputs.re  lists.ml  lists.re  main.ml  main.re  mutation.ml  mutation.re  nested.ml  nested.re  nonrecursive_input.ml  nonrecursive_input.re  record.ml  record.re  recursive_input.ml  recursive_input.re  scalars.ml  scalars.re  scalars_args.ml  scalars_args.re  (+14 more)
wait_pr_to_be_merged.esy.lock/: index.json
(+2344 files in other folders)
