opam-version: "2.0"
maintainer: "Tomasz Cichocinski <tomaszcichocinski@gmail.com>"
authors: "Tomasz Cichocinski <tomaszcichocinski@gmail.com>"
synopsis: "GraphQL PPX rewriter for ReScript/ReasonML"
description: "GraphQL language primitives for ReScript/ReasonML written in ReasonML"
license: "MIT"
homepage: "https://github.com/reasonml-community/graphql-ppx"
bug-reports: "https://github.com/reasonml-community/graphql-ppx/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "alcotest" {with-test}
  "dune" {>= "2.5"}
  "ocaml" {>= "4.06"}
  "ppxlib" {>= "0.21.0"}
  "reason"
  "yojson"
]
