(library
 (name graphql_ppx_base)
 (public_name graphql_ppx.base)
 (libraries unix result yojson)
 (flags
  (:standard -w -9))
 (preprocess
  (pps ppx_tools_versioned.metaquot_408)))

(rule
 (targets build_config.ml)
 (deps
  (:first-dep build_config.cppo.ml))
 (action
  (chdir
   ${ROOT}
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{first-dep} -o %{targets}))))
