;; dune file

(library
 (name Tests)
 ; the linkall flag ensures that all of our tests are compiled and the
 ; -g flag emits debugging information
 (ocamlopt_flags -linkall -g)
 ; you will want to depend on the library you are testing as well, however for
 ; the purposes of this example we are only depending on the test runner itself
 (libraries rely.lib graphql_ppx.base graphql_ppx)
 (modules
  (:standard \ RunTests)))

(executable
 (name RunTests)
 (libraries Tests)
 (modules RunTests))
